--- a/Bayesian_Changepoint_Zoo_dummy_data.ipynb
+++ b/Bayesian_Changepoint_Zoo_dummy_data.ipynb
@@ -579,14 +579,6 @@
     "    betas = pm.HalfCauchy('betas',100,shape=(n_components,n_states))\n",
     "    \n",
     "    lambdas = pm.Beta('lambdas', alphas, betas, shape=(n_components,n_states))\n",
-    "    \n",
-    "    # clust0_lambda = pm.math.stack([pm.Beta('l00',alphas[0,0], betas[0,0]),\n",
-    "    #                          pm.Beta('l01',alphas[0,1], betas[0,1]),\n",
-    "    #                          pm.Beta('l02',alphas[0,2], betas[0,2])])\n",
-    "    # clust1_lambda = pm.math.stack([pm.Beta('l10',alphas[1,0], betas[1,0]),\n",
-    "    #                          pm.Beta('l11',alphas[1,1], betas[1,1]),\n",
-    "    #                          pm.Beta('l12',alphas[1,2], betas[1,2])])\n",
-    "    # lambdas = pm.math.stack([clust0_lambda,clust1_lambda])\n",
     "\n",
     "     #################################################\n",
     "    a = pm.HalfCauchy('a_tau', 3., shape = n_states - 1)\n",
@@ -1112,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1119,7 @@
     }
    ],
    "source": [
-    "gen_bernoulli_emissions_plot(\n",
+    "gen_plots.gen_bernoulli_emissions_plot(\n",
     "    trace,\n",
     "    n_states,\n",
     "    n_components,\n",
